--- a/index.html
+++ b/index.html
@@ -691,41 +691,35 @@ const [aiHistory, setAiHistory] = useState([]);
     response += `Μέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο.<br>`;
     response += `Ιδανικά σε ${colors}!<br><br>`;
     response += `Έτοιμες προτάσεις τώρα:<br>`;
-    response += `1. Djeco Πολύχρωμο αντιανεμικό μπουφάν κοντό με κουκούλα - 18,70 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
-    response += `2. Hashtag Παιδικό casual μπουφάν με κουκούλα (μπεζ) - 18,00 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `1. Djeco Αδιάβροχο Παιδικό Casual Μπουφάν Πολύχρωμο - 18,70 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a><br><br>`;
+    response += `2. Hashtag Παιδικό Casual Μπουφάν Μπεζ με Κουκούλα - 18,00 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a><br><br>`;
     response += `3. Shein Βασικό αντιανεμικό μπουφάν (πολλά χρώματα) - 15-22 €<br>`;
     response += `<a href="https://eur.shein.com/pdsearch/%CE%BC%CF%80%CE%BF%CF%85%CF%86%CE%AC%CE%BD%20%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CF%8C" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
     response += `4. Adidas Παιδικό μπουφάν με κουκούλα - 35-45 €<br>`;
-    response += `<a href="https://www.skroutz.gr/c/380/paidika-rouxa/f/513536/moyfana.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
+    response += `<a href="https://www.skroutz.gr/c/2075/Paidika_Mpoufan/f/558144/moyfana.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
   } 
   else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots') || q.includes('παπούτσι') || q.includes('μποτακια')) {
     response += `Προτείνω χειμερινές μπότες ή αθλητικά με ζεστή φόδρα.<br>`;
-    response += `Νούμερο: ${shoe} ή +1 για χοντρές κάλτσες.<br><br>`;
+    response += `Νούμερο: ${shoe} ή +1.<br><br>`;
     response += `Έτοιμες προτάσεις τώρα:<br>`;
     response += `1. Under Armour Ua Gps Surge 4 Ac Running Γκρι - ~30 €<br>`;
-    response += `<a href="https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536/28.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
-    response += `2. adidas Tensaur Blue Rush / Core White / Dark Blue - ~25 €<br>`;
-    response += `<a href="https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536_533177/28-koritsi.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `<a href="https://www.skroutz.gr/s/58709512/Under-Armour-Ua-Gps-Surge-4-Ac-Athlitika-Paidika-Papoutsia-Running-me-Skrats-Gri-3027109-100.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a><br><br>`;
+    response += `2. adidas Tensaur Sport 2.0 Dark Blue / Blue Rush - ~25 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/37097750/adidas-Tensaur-Sport-2-0-Paidika-Sneakers-me-Skrats-Dark-Blue-Blue-Rush-Cloud-White-GW6458.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a><br><br>`;
     response += `3. Skechers Uno Lite Παιδικά αθλητικά - ~35 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/45678901/Skechers-Uno-Lite.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
-    response += `4. Crocs Classic Lined Clog Παιδικά - ~28 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/98765432/Crocs-Classic-Lined-Clog.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a>`;
+    response += `<a href="https://www.skroutz.gr/s/45678901/Skechers-Uno-Lite.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a>`;
   } 
   else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δωρο') || q.includes('gift') || q.includes('χριστούγεννα') || q.includes('γενεθλια')) {
     response += `Ιδέες δώρων για ${age} ετών ${gender}:<br>`;
     response += `- Κούκλες / Lego / παιχνίδια δημιουργίας<br>`;
     response += `- Ρούχα ή αξεσουάρ σε ${colors}<br><br>`;
     response += `Έτοιμες προτάσεις τώρα:<br>`;
-    response += `1. Σαββάλας Παντομίμα Παιχνίδι εκφρασης - 24,90 €<br>`;
+    response += `1. Σαββάλας Παντομίμα Παιχνίδι - 24,90 €<br>`;
     response += `<a href="https://www.public.gr/product/savvalas-pantomima-paixnidi-ekfrasis-kai-fantasias-epitrapezio-paixnidi-gia-paidia-5-eton-gia-2-4-paiktes/prod14549908pp" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
     response += `2. Lego Classic Creative Animals - ~35 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
-    response += `3. Mattel Barbie Dreamhouse - ~80 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/98765432/Barbie-Dreamhouse.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
-    response += `4. Ravensburger Puzzle 100 τεμ. - ~12 €<br>`;
-    response += `<a href="https://www.skroutz.gr/c/380/paidika-paixnidia/f/123456/puzzle.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a>`;
+    response += `<a href="https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a>`;
   } 
   else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('αποκριες') || q.includes('καρναβάλι') || q.includes('costume') || q.includes('στολές')) {
     response += `Προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.<br>`;
@@ -735,21 +729,7 @@ const [aiHistory, setAiHistory] = useState([]);
     response += `1. Παιδική Στολή Πριγκίπισσα (ροζ) - 12,99 €<br>`;
     response += `<a href="https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CE%AE%20%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CF%81%CE%B9%CE%B3%CE%BA%CE%AF%CF%80%CE%B9%CF%83%CF%83%CE%B1" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
     response += `2. Στολή Πειρατή (μαύρη) - 14,90 €<br>`;
-    response += `<a href="https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CE%B5%CE%B9%CF%81%CE%B1%CF%84%CE%AE" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
-    response += `3. Στολή Unicorn (μονόκερος) - 19,99 €<br>`;
-    response += `<a href="https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CE%BC%CE%BF%CE%BD%CF%8C%CE%BA%CE%B5%CF%81%CE%BF%CF%82" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a>`;
-  } 
-  else if (q.includes('ρούχα') || q.includes('φούστα') || q.includes('παντελόνι') || q.includes('φόρεμα') || q.includes('ρούχο') || q.includes('εσώρουχα') || q.includes('πυτζάμες') || q.includes('σετ')) {
-    response += `Προτείνω άνετα και ζεστά ρούχα για χειμώνα.<br>`;
-    response += `Σετ φούτερ + παντελόνι ή φόρμες σε ${colors}.<br>`;
-    response += `Shein και H&M έχουν πολλές επιλογές κάτω από 20-30€.<br><br>`;
-    response += `Έτοιμες προτάσεις τώρα:<br>`;
-    response += `1. Shein Σετ φούτερ & παντελόνι (ροζ) - 15,99 €<br>`;
-    response += `<a href="https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CF%8C%20%CF%83%CE%B5%CF%84%20%CF%86%CE%BF%CF%8D%CF%84%CE%B5%CF%81" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
-    response += `2. H&M Basic φούτερ (μωβ) - 12,99 €<br>`;
-    response += `<a href="https://www2.hm.com/el_gr/kids/clothes/sweatshirts.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο H&M</a><br><br>`;
-    response += `3. Zara Παιδικό φόρεμα (μπλε) - 22,95 €<br>`;
-    response += `<a href="https://www.zara.com/gr/el/kids-girl-clothing-dresses-l1057.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στη Zara</a>`;
+    response += `<a href="https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CE%B5%CE%B9%CF%81%CE%B1%CF%84%CE%AE" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a>`;
   } 
   else {
     response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!\n\n`;
@@ -758,8 +738,7 @@ const [aiHistory, setAiHistory] = useState([]);
     response += `- παπούτσια\n`;
     response += `- δώρο γενεθλίων\n`;
     response += `- στολή απόκριες\n`;
-    response += `- ρούχα χειμώνα\n\n`;
-    response += `Οι παραπάνω επιλογές είναι πατητές παρακάτω!`;
+    response += `- ρούχα χειμώνα`;
   }
 
   setAnswer(response);
