--- a/index.html
+++ b/index.html
@@ -695,8 +695,8 @@ const [aiHistory, setAiHistory] = useState([]);
     response += `<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a><br><br>`;
     response += `2. Hashtag Παιδικό Casual Μπουφάν Μπεζ με Κουκούλα - 18,00 €<br>`;
     response += `<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν στο Skroutz</a><br><br>`;
-    response += `3. Shein Βασικό αντιανεμικό μπουφάν (πολλά χρώματα) - 15-22 €<br>`;
-    response += `<a href="https://eur.shein.com/pdsearch/%CE%BC%CF%80%CE%BF%CF%85%CF%86%CE%AC%CE%BD%20%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CF%8C" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
+    response += `3. Shein Παιδικά αντιανεμικά μπουφάν (πολλά χρώματα & μεγέθη) - 12-25 €<br>`;
+response += `<a href="https://eur.shein.com/Kids-c-2031.html?search=μπουφάν+παιδικό" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες παιδικά μπουφάν στο Shein</a><br><br>`;
     response += `4. Adidas Παιδικό μπουφάν με κουκούλα - 35-45 €<br>`;
     response += `<a href="https://www.skroutz.gr/c/2075/Paidika_Mpoufan/f/558144/moyfana.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
   } 
